--- a/public/styles/common.css
+++ b/public/styles/common.css
@@ -50,7 +50,7 @@ input::placeholder {
 }
 
 .title {
-  padding: 25px
+  padding: 25px;
 }
 
 .modal {
@@ -68,7 +68,7 @@ input::placeholder {
 .modal .inputs-wrapper {
   display: flex;
   justify-content: end;
-  margin: 10px
+  margin: 10px;
 }
 
 .modal button {
@@ -79,5 +79,5 @@ input::placeholder {
 }
 
 .modal .body-wrapper {
-  margin: 25px
+  margin: 25px;
 }
