--- a/public/styles/rooms.css
+++ b/public/styles/rooms.css
@@ -1,5 +1,5 @@
 #rooms-wrapper {
-  display: flex
+  display: flex;
 }
 
 #add-room-btn {
@@ -27,7 +27,7 @@
 }
 
 .join-btn {
-  background-color:var(--main-button-background-color);
+  background-color: var(--main-button-background-color);
   border: 1px solid var(--main-button-border-color);
   padding: 5px 20px;
 }
